--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+::after,
+::before {
+  box-sizing: inherit;
+}
+
+body {
+  background-image: url(background/background.jpg);
+  background-size: 600px;
+  background-repeat: round;
+  background-color: #d9d9d9;
+  max-width: 650px;
+  margin: 5px auto;
+  margin-top: 10px;
+  padding: 5px;
+  font-family: 'Source Sans Pro', sans-serif;
+  line-height: 1.5;
 }
