--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,17 @@ html {
 body {
   background-image: url(background/background.jpg);
   background-size: 600px;
-  background-repeat: round;
   background-color: #d9d9d9;
   max-width: 650px;
   margin: 5px auto;
   margin-top: 10px;
   padding: 5px;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Lato', sans-serif;
   line-height: 1.5;
+}
+
+@media (max-width: 767px) {
+  body {
+    background-repeat: round;
+  }
 }
