--- a/src/Header/style.css
+++ b/src/Header/style.css
@@ -7,3 +7,12 @@
     border: 1px solid #000000;
     border-radius: 10px;
 }
+
+.header__clock {
+    display: flex;
+    font-size: small;
+    color: #000000;
+    justify-content: right;
+    margin: 5px;
+    padding: 5px;
+}
